k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
spec:
  tls:
    - hosts:
        - staging.44-197-210-246.nip.io
      secretName: nextcloud-tls
  rules:
    - host: staging.44-197-210-246.nip.io
